codama-macros/tests/node_attribute/number_type_node_unrecognized_attribute.fail.rs
use codama_macros::node;

#[node(numberTypeNode(u32, unrecognized = 42, le))]
pub struct Foo(usize);

fn main() {}
